--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,11 @@
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<version>1.5.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId> 
+			<artifactId>postgresql</artifactId> 
+			<scope>runtime</scope> 
 		</dependency>
 
 		<!-- Commons -->
